[package]
name = "hello-world"
version = "0.1.0"
authors = ["fangwenyu"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
mini-redis = "0.4"
futures = "0.3"
async-std = "1.12.0"
tokio-stream = "0.1.14"
rand = "0.8.5"
atomic-wait = "1"
